# timeline

./: .gitignore  README  pyproject.toml
data/: data.csv  event_groups.csv  events.csv  new_format.csv  popes.csv  process_file.py  query_results.txt  timeline_groups.csv  timeline_meta.csv  timelines.csv  timelines.sql
database/: backup.db  events.csv  schema.txt  timeline_meta.csv  timelines.csv  timelines.db  timelines.sql
src/db/: create_tables.py  crud_operations.py  database.py  models.py  read_csv.py  schema.py
src/timeline/: plot.py  show.py  show_dash.py  show_gantt.py  show_gantt_events.py  show_mpl.py  show_tk.py  stackoverflow.py
