[build-system]
requires = ["setuptools>=40.8.0"]

[project]
name = "timeline"
version = "2025.0.0"
dependencies=[
    "dash",
    "click",
    "plotly",
    "sqlalchemy",
    "dash",
    "dash-calendar-timeline"
]

[project.scripts]
timeline = "timeline.show:run_app"
timeline_dash = "timeline.show_dash:run_app"
timeline_tk = "timeline.show_tk:run_app"
timeline_mpl = "timeline.show_mpl:run_app"
