[build-system]
requires = ["setuptools>=40.8.0"]

[project]
name = "timeline"
version = "2025.0.0"
dependencies=[
    "dash",
    "click",
    "plotly",
    "matplotlib",
    "matplotlib-inline",
    "sqlalchemy",
    "pandas",
    "pep8",
    "np",
    "autopep8"
]

[project.scripts]
timeline = "timeline.show:run_app"
create_database = "db.create_tables:create_tables"
add_csv_data = "db.crud_operations:import_csv_data"
